// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Create Secret Manager Wizard should render form 1`] = `
<div>
  <div
    class="StepWizard--main StepWizard--navBar"
  >
    <div
      class="StepWizard--navBarList"
    >
      <span
        class="StepWizard--header"
      >
        <span
          class="bp3-icon StyledProps--main"
        >
          <svg
            fill="none"
            height="37"
            viewBox="0 0 33 33"
            width="37"
          >
            <path
              d="M16.711 16.53a.939.939 0 00.933-.934c0-.489-.4-.933-.933-.933a.939.939 0 00-.933.933c0 .489.4.933.933.933zm-2.8-2.578a.939.939 0 00.933-.934c0-.533-.4-.933-.933-.933a.939.939 0 00-.933.933c0 .534.4.934.933.934zm2.8 0a.939.939 0 00.933-.934c0-.533-.4-.933-.933-.933a.939.939 0 00-.933.933c0 .534.4.934.933.934zm2.8 0a.939.939 0 00.933-.934c0-.533-.4-.933-.933-.933a.939.939 0 00-.933.933c0 .534.444.934.933.934zm-5.6-2.534a.939.939 0 00.933-.933c0-.533-.4-.933-.933-.933a.939.939 0 00-.933.933c0 .533.4.933.933.933zm2.8 0a.939.939 0 00.933-.933c0-.533-.4-.933-.933-.933a.939.939 0 00-.933.933c0 .533.4.933.933.933zm2.8 0a.939.939 0 00.933-.933c0-.533-.4-.933-.933-.933a.939.939 0 00-.933.933c0 .533.444.933.933.933zm-2.8-2.533a.939.939 0 00.933-.933c0-.534-.4-.934-.933-.934a.939.939 0 00-.933.934c0 .488.4.933.933.933zm2.8 0a.939.939 0 00.933-.933c0-.534-.4-.934-.933-.934a.939.939 0 00-.933.934c0 .488.444.933.933.933zm-5.6 0a.939.939 0 00.933-.933c0-.534-.4-.934-.933-.934a.939.939 0 00-.933.934c0 .488.4.933.933.933zm2.445 23.289L0 .174h32.711l-16.355 32z"
              fill="#000"
            />
          </svg>
        </span>
      </span>
      <span
        class="StepWizard--title StepWizard--header"
      >
        HashiCorp Vault
      </span>
      <div
        class="StepWizard--navStep StepWizard--activeStep"
      >
        <span
          class="StepWizard--number"
        >
          1
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          Overview
        </p>
      </div>
      <div
        class="StepWizard--navStep"
      >
        <span
          class="StepWizard--number"
        >
          2
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          HashiCorp Vault Details
        </p>
      </div>
      <div
        class="StepWizard--navStep"
      >
        <span
          class="StepWizard--number"
        >
          3
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          Test Connection
        </p>
      </div>
    </div>
    <div
      class="StepWizard--stepDetails"
    >
       
      <div
        class="Layout--vertical Layout--layout-spacing-xxlarge StyledProps--main firstep"
      >
        <div
          class="heading"
        >
          HashiCorp Vault Overview
        </div>
        <div
          class="StyledProps--font StyledProps--main connectorForm StyledProps--padding-small"
        >
          <div
            class="OverlaySpinner--overlaySpinner"
          >
            <form
              class="FormikForm--main"
            >
              <div>
                <div
                  class="StyledProps--font StyledProps--main"
                  style="min-height: 460px;"
                >
                  <div
                    class="StyledProps--font StyledProps--main main"
                  >
                    <div
                      class="StyledProps--font StyledProps--main connectorFormNameWrapper"
                    >
                      <div
                        class="StyledProps--font StyledProps--main connectorFormNameElm"
                      >
                        <div
                          class="InputWithIdentifier--txtNameContainer"
                        >
                          <div
                            class="Layout--horizontal StyledProps--main InputWithIdentifier--txtIdContainer"
                          >
                            <p
                              class="StyledProps--font StyledProps--main"
                            >
                              ID
                              :
                            </p>
                            <span
                              class="InputWithIdentifier--idInput"
                              contenteditable="true"
                            />
                            <span
                              class="bp3-icon bp3-icon-edit StyledProps--main"
                              icon="edit"
                              style="vertical-align: middle;"
                            >
                              <svg
                                data-icon="edit"
                                height="12"
                                viewBox="0 0 16 16"
                                width="12"
                              >
                                <desc>
                                  edit
                                </desc>
                                <path
                                  d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                                  fill-rule="evenodd"
                                />
                              </svg>
                            </span>
                          </div>
                          <div
                            class="bp3-form-group"
                            data-id="name-0"
                          >
                            <label
                              class="bp3-label"
                              for="name"
                            >
                              Name
                               
                              <span
                                class="bp3-text-muted"
                              />
                            </label>
                            <div
                              class="bp3-form-content"
                            >
                              <div
                                class="bp3-input-group"
                              >
                                <input
                                  autocomplete="off"
                                  class="bp3-input"
                                  name="name"
                                  type="text"
                                  value=""
                                />
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main"
                        style="justify-content: center;"
                      >
                        <p
                          class="StyledProps--font StyledProps--main fieldToggleLabel StyledProps--color StyledProps--color-blue500"
                        >
                          + Description
                        </p>
                        <p
                          class="StyledProps--font StyledProps--main fieldToggleLabel StyledProps--color StyledProps--color-blue500"
                        >
                          + Tags
                        </p>
                      </div>
                    </div>
                    <div
                      class="StyledProps--font StyledProps--main connectorFormElm"
                    >
                      
                    </div>
                  </div>
                </div>
                <div
                  class="Layout--horizontal StyledProps--main"
                >
                  <button
                    class="bp3-button StyledProps--font Button--button StyledProps--main StyledProps--intent-primary"
                    type="submit"
                  >
                    <span
                      class="bp3-button-text"
                    >
                      <span>
                        Save and Continue
                      </span>
                    </span>
                    <span
                      class="bp3-icon bp3-icon-chevron-right StyledProps--main"
                      icon="chevron-right"
                    >
                      <svg
                        data-icon="chevron-right"
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                      >
                        <desc>
                          chevron-right
                        </desc>
                        <path
                          d="M10.71 7.29l-4-4a1.003 1.003 0 00-1.42 1.42L8.59 8 5.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l4-4c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </button>
                </div>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Create Secret Manager Wizard should render form 2`] = `
<div>
  <div
    class="StepWizard--main StepWizard--navBar"
  >
    <div
      class="StepWizard--navBarList"
    >
      <span
        class="StepWizard--header"
      >
        <span
          class="bp3-icon StyledProps--main"
        >
          <svg
            fill="none"
            height="37"
            viewBox="0 0 33 33"
            width="37"
          >
            <path
              d="M16.711 16.53a.939.939 0 00.933-.934c0-.489-.4-.933-.933-.933a.939.939 0 00-.933.933c0 .489.4.933.933.933zm-2.8-2.578a.939.939 0 00.933-.934c0-.533-.4-.933-.933-.933a.939.939 0 00-.933.933c0 .534.4.934.933.934zm2.8 0a.939.939 0 00.933-.934c0-.533-.4-.933-.933-.933a.939.939 0 00-.933.933c0 .534.4.934.933.934zm2.8 0a.939.939 0 00.933-.934c0-.533-.4-.933-.933-.933a.939.939 0 00-.933.933c0 .534.444.934.933.934zm-5.6-2.534a.939.939 0 00.933-.933c0-.533-.4-.933-.933-.933a.939.939 0 00-.933.933c0 .533.4.933.933.933zm2.8 0a.939.939 0 00.933-.933c0-.533-.4-.933-.933-.933a.939.939 0 00-.933.933c0 .533.4.933.933.933zm2.8 0a.939.939 0 00.933-.933c0-.533-.4-.933-.933-.933a.939.939 0 00-.933.933c0 .533.444.933.933.933zm-2.8-2.533a.939.939 0 00.933-.933c0-.534-.4-.934-.933-.934a.939.939 0 00-.933.934c0 .488.4.933.933.933zm2.8 0a.939.939 0 00.933-.933c0-.534-.4-.934-.933-.934a.939.939 0 00-.933.934c0 .488.444.933.933.933zm-5.6 0a.939.939 0 00.933-.933c0-.534-.4-.934-.933-.934a.939.939 0 00-.933.934c0 .488.4.933.933.933zm2.445 23.289L0 .174h32.711l-16.355 32z"
              fill="#000"
            />
          </svg>
        </span>
      </span>
      <span
        class="StepWizard--title StepWizard--header"
      >
        HashiCorp Vault
      </span>
      <div
        class="StepWizard--navStep StepWizard--completedStep"
      >
        <span
          class="StepWizard--completedIcon"
        >
          <span
            class="bp3-icon bp3-icon-small-tick StyledProps--main StyledProps--color StyledProps--color-grey200"
            icon="small-tick"
          >
            <svg
              data-icon="small-tick"
              height="20"
              viewBox="0 0 20 20"
              width="20"
            >
              <desc>
                small-tick
              </desc>
              <path
                d="M15 5c-.28 0-.53.11-.71.29L8 11.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42l3 3c.18.18.43.29.71.29s.53-.11.71-.29l7-7A1.003 1.003 0 0015 5z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          Overview
        </p>
      </div>
      <div
        class="StepWizard--navStep StepWizard--completedStep"
      >
        <span
          class="StepWizard--completedIcon"
        >
          <span
            class="bp3-icon bp3-icon-small-tick StyledProps--main StyledProps--color StyledProps--color-grey200"
            icon="small-tick"
          >
            <svg
              data-icon="small-tick"
              height="20"
              viewBox="0 0 20 20"
              width="20"
            >
              <desc>
                small-tick
              </desc>
              <path
                d="M15 5c-.28 0-.53.11-.71.29L8 11.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42l3 3c.18.18.43.29.71.29s.53-.11.71-.29l7-7A1.003 1.003 0 0015 5z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          HashiCorp Vault Details
        </p>
      </div>
      <div
        class="StepWizard--navStep StepWizard--activeStep"
      >
        <span
          class="StepWizard--number"
        >
          3
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          Test Connection
        </p>
      </div>
    </div>
    <div
      class="StepWizard--stepDetails"
    >
       
      <div
        class="Layout--vertical StyledProps--main StyledProps--padding-top-large StyledProps--padding-right-small StyledProps--padding-left-small StyledProps--padding-bottom-large"
        style="height: 100%;"
      >
        <div
          class="Layout--vertical StyledProps--main"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-size-medium StyledProps--font-weight-semi-bold StyledProps--color StyledProps--color-grey800"
          >
            Test Connection
          </p>
          <div
            class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main StyledProps--padding-top-xsmall"
          >
            <p
              class="StyledProps--font StyledProps--main subHeading StyledProps--color StyledProps--color-grey400 StyledProps--font-size-small"
            >
              Vault URL : 
            </p>
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main subHeading StyledProps--color StyledProps--color-grey600 StyledProps--font-size-small"
              style="--text-line-clamp: 1; width: 600px;"
            >
              http://localhost:8200
            </p>
          </div>
          <div
            class="StyledProps--font StyledProps--main content StyledProps--padding-top-xxlarge"
          >
            <div
              class="Layout--vertical Layout--layout-spacing-large StyledProps--main StepsProgress--stepsProgress"
              id="steps-progress"
            >
              <div
                class="StepsProgress--progressBar"
              >
                <div
                  class="bp3-progress-bar bp3-intent-danger bp3-no-stripes StepsProgress--progressHeight"
                >
                  <div
                    class="bp3-progress-meter"
                    style="width: 100%;"
                  />
                </div>
              </div>
              <div
                class="Layout--vertical Layout--layout-spacing-large StyledProps--main"
              >
                <div
                  class="StepsProgress--stepWrap"
                >
                  <span
                    class="bp3-icon bp3-icon-error StyledProps--main StyledProps--color StyledProps--color-red500 StyledProps--margin-right-small"
                    icon="error"
                  >
                    <svg
                      data-icon="error"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <desc>
                        error
                      </desc>
                      <path
                        d="M7.99-.01c-4.42 0-8 3.58-8 8s3.58 8 8 8 8-3.58 8-8-3.58-8-8-8zm1 13h-2v-2h2v2zm0-3h-2v-7h2v7z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                  <div
                    class="StyledProps--font StyledProps--main"
                    style=""
                  >
                    <div
                      class="Layout--vertical StyledProps--main"
                      style="width: 100%;"
                    >
                      <p
                        class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey600"
                      >
                        Validating the HashiCorp Vault authentication and permissions
                      </p>
                      <p
                        class="StyledProps--font StyledProps--main StyledProps--padding-top-small"
                      >
                        Test failed for the connector
                      </p>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="Layout--horizontal Layout--layout-spacing-large StyledProps--main btnWrapper"
        >
          <button
            class="bp3-button bp3-disabled StyledProps--font Button--button StyledProps--main StyledProps--intent-primary"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <span
              class="bp3-button-text"
            >
              Finish
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Create Secret Manager Wizard should render form in edit 1`] = `
<div>
  <div
    class="StepWizard--main StepWizard--navBar"
  >
    <div
      class="StepWizard--navBarList"
    >
      <span
        class="StepWizard--header"
      >
        <span
          class="bp3-icon StyledProps--main"
        >
          <svg
            fill="none"
            height="37"
            viewBox="0 0 33 33"
            width="37"
          >
            <path
              d="M16.711 16.53a.939.939 0 00.933-.934c0-.489-.4-.933-.933-.933a.939.939 0 00-.933.933c0 .489.4.933.933.933zm-2.8-2.578a.939.939 0 00.933-.934c0-.533-.4-.933-.933-.933a.939.939 0 00-.933.933c0 .534.4.934.933.934zm2.8 0a.939.939 0 00.933-.934c0-.533-.4-.933-.933-.933a.939.939 0 00-.933.933c0 .534.4.934.933.934zm2.8 0a.939.939 0 00.933-.934c0-.533-.4-.933-.933-.933a.939.939 0 00-.933.933c0 .534.444.934.933.934zm-5.6-2.534a.939.939 0 00.933-.933c0-.533-.4-.933-.933-.933a.939.939 0 00-.933.933c0 .533.4.933.933.933zm2.8 0a.939.939 0 00.933-.933c0-.533-.4-.933-.933-.933a.939.939 0 00-.933.933c0 .533.4.933.933.933zm2.8 0a.939.939 0 00.933-.933c0-.533-.4-.933-.933-.933a.939.939 0 00-.933.933c0 .533.444.933.933.933zm-2.8-2.533a.939.939 0 00.933-.933c0-.534-.4-.934-.933-.934a.939.939 0 00-.933.934c0 .488.4.933.933.933zm2.8 0a.939.939 0 00.933-.933c0-.534-.4-.934-.933-.934a.939.939 0 00-.933.934c0 .488.444.933.933.933zm-5.6 0a.939.939 0 00.933-.933c0-.534-.4-.934-.933-.934a.939.939 0 00-.933.934c0 .488.4.933.933.933zm2.445 23.289L0 .174h32.711l-16.355 32z"
              fill="#000"
            />
          </svg>
        </span>
      </span>
      <span
        class="StepWizard--title StepWizard--header"
      >
        HashiCorp Vault
      </span>
      <div
        class="StepWizard--navStep StepWizard--activeStep"
      >
        <span
          class="StepWizard--number"
        >
          1
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          Overview
        </p>
      </div>
      <div
        class="StepWizard--navStep"
      >
        <span
          class="StepWizard--number"
        >
          2
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          HashiCorp Vault Details
        </p>
      </div>
      <div
        class="StepWizard--navStep"
      >
        <span
          class="StepWizard--number"
        >
          3
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          Test Connection
        </p>
      </div>
    </div>
    <div
      class="StepWizard--stepDetails"
    >
       
      <div
        class="Layout--vertical Layout--layout-spacing-xxlarge StyledProps--main firstep"
      >
        <div
          class="heading"
        >
          HashiCorp Vault Overview
        </div>
        <div
          class="StyledProps--font StyledProps--main connectorForm StyledProps--padding-small"
        >
          <div
            class="OverlaySpinner--overlaySpinner"
          >
            <form
              class="FormikForm--main"
            >
              <div>
                <div
                  class="StyledProps--font StyledProps--main"
                  style="min-height: 460px;"
                >
                  <div
                    class="StyledProps--font StyledProps--main main"
                  >
                    <div
                      class="StyledProps--font StyledProps--main connectorFormNameWrapper"
                    >
                      <div
                        class="StyledProps--font StyledProps--main connectorFormNameElm"
                      >
                        <div
                          class="InputWithIdentifier--txtNameContainer"
                        >
                          <div
                            class="Layout--horizontal StyledProps--main InputWithIdentifier--txtIdContainer"
                          >
                            <p
                              class="StyledProps--font StyledProps--main"
                            >
                              ID
                              :
                            </p>
                            <span
                              class="InputWithIdentifier--idInput"
                              contenteditable="false"
                              disabled=""
                            >
                              sm14
                            </span>
                          </div>
                          <div
                            class="bp3-form-group"
                            data-id="name-0"
                          >
                            <label
                              class="bp3-label"
                              for="name"
                            >
                              Name
                               
                              <span
                                class="bp3-text-muted"
                              />
                            </label>
                            <div
                              class="bp3-form-content"
                            >
                              <div
                                class="bp3-input-group"
                              >
                                <input
                                  autocomplete="off"
                                  class="bp3-input"
                                  name="name"
                                  type="text"
                                  value="sm14"
                                />
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main"
                        style="justify-content: center;"
                      >
                        <p
                          class="StyledProps--font StyledProps--main fieldToggleLabel StyledProps--color StyledProps--color-blue500"
                        >
                          + Tags
                        </p>
                      </div>
                    </div>
                    <div
                      class="StyledProps--font StyledProps--main connectorFormElm"
                    >
                      <div
                        class="bp3-form-group expandedDescription"
                        data-id="description-1"
                      >
                        <label
                          class="bp3-label"
                          for="description"
                        >
                          <div
                            class="StyledProps--font StyledProps--main headerRow"
                          >
                            <span
                              class="StyledProps--font StyledProps--main StyledProps--inline"
                            >
                              Description
                            </span>
                            <span
                              class="StyledProps--font StyledProps--main fieldToggleLabel StyledProps--inline StyledProps--color StyledProps--color-blue500"
                            >
                              remove
                            </span>
                          </div>
                           
                          <span
                            class="bp3-text-muted"
                          />
                        </label>
                        <div
                          class="bp3-form-content"
                        >
                          <textarea
                            autocomplete="off"
                            class="bp3-input bp3-fill"
                            name="description"
                          >
                            asd
                          </textarea>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="Layout--horizontal StyledProps--main"
                >
                  <button
                    class="bp3-button StyledProps--font Button--button StyledProps--main StyledProps--intent-primary"
                    type="submit"
                  >
                    <span
                      class="bp3-button-text"
                    >
                      <span>
                        Save and Continue
                      </span>
                    </span>
                    <span
                      class="bp3-icon bp3-icon-chevron-right StyledProps--main"
                      icon="chevron-right"
                    >
                      <svg
                        data-icon="chevron-right"
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                      >
                        <desc>
                          chevron-right
                        </desc>
                        <path
                          d="M10.71 7.29l-4-4a1.003 1.003 0 00-1.42 1.42L8.59 8 5.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l4-4c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </button>
                </div>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Create Secret Manager Wizard should render form in edit 2`] = `
<div>
  <div
    class="StepWizard--main StepWizard--navBar"
  >
    <div
      class="StepWizard--navBarList"
    >
      <span
        class="StepWizard--header"
      >
        <span
          class="bp3-icon StyledProps--main"
        >
          <svg
            fill="none"
            height="37"
            viewBox="0 0 33 33"
            width="37"
          >
            <path
              d="M16.711 16.53a.939.939 0 00.933-.934c0-.489-.4-.933-.933-.933a.939.939 0 00-.933.933c0 .489.4.933.933.933zm-2.8-2.578a.939.939 0 00.933-.934c0-.533-.4-.933-.933-.933a.939.939 0 00-.933.933c0 .534.4.934.933.934zm2.8 0a.939.939 0 00.933-.934c0-.533-.4-.933-.933-.933a.939.939 0 00-.933.933c0 .534.4.934.933.934zm2.8 0a.939.939 0 00.933-.934c0-.533-.4-.933-.933-.933a.939.939 0 00-.933.933c0 .534.444.934.933.934zm-5.6-2.534a.939.939 0 00.933-.933c0-.533-.4-.933-.933-.933a.939.939 0 00-.933.933c0 .533.4.933.933.933zm2.8 0a.939.939 0 00.933-.933c0-.533-.4-.933-.933-.933a.939.939 0 00-.933.933c0 .533.4.933.933.933zm2.8 0a.939.939 0 00.933-.933c0-.533-.4-.933-.933-.933a.939.939 0 00-.933.933c0 .533.444.933.933.933zm-2.8-2.533a.939.939 0 00.933-.933c0-.534-.4-.934-.933-.934a.939.939 0 00-.933.934c0 .488.4.933.933.933zm2.8 0a.939.939 0 00.933-.933c0-.534-.4-.934-.933-.934a.939.939 0 00-.933.934c0 .488.444.933.933.933zm-5.6 0a.939.939 0 00.933-.933c0-.534-.4-.934-.933-.934a.939.939 0 00-.933.934c0 .488.4.933.933.933zm2.445 23.289L0 .174h32.711l-16.355 32z"
              fill="#000"
            />
          </svg>
        </span>
      </span>
      <span
        class="StepWizard--title StepWizard--header"
      >
        HashiCorp Vault
      </span>
      <div
        class="StepWizard--navStep StepWizard--completedStep"
      >
        <span
          class="StepWizard--completedIcon"
        >
          <span
            class="bp3-icon bp3-icon-small-tick StyledProps--main StyledProps--color StyledProps--color-grey200"
            icon="small-tick"
          >
            <svg
              data-icon="small-tick"
              height="20"
              viewBox="0 0 20 20"
              width="20"
            >
              <desc>
                small-tick
              </desc>
              <path
                d="M15 5c-.28 0-.53.11-.71.29L8 11.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42l3 3c.18.18.43.29.71.29s.53-.11.71-.29l7-7A1.003 1.003 0 0015 5z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          Overview
        </p>
      </div>
      <div
        class="StepWizard--navStep StepWizard--activeStep"
      >
        <span
          class="StepWizard--number"
        >
          2
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          HashiCorp Vault Details
        </p>
      </div>
      <div
        class="StepWizard--navStep"
      >
        <span
          class="StepWizard--number"
        >
          3
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          Test Connection
        </p>
      </div>
    </div>
    <div
      class="StepWizard--stepDetails"
    >
       
      <div
        class="StyledProps--font StyledProps--main StyledProps--padding-top-medium"
        style="width: 64%;"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-size-medium StyledProps--padding-bottom-xlarge"
        >
          HashiCorp Vault Details
        </p>
        <div
          class="OverlaySpinner--overlaySpinner"
        >
          <form
            class="FormikForm--main"
          >
            <div>
              <div
                class="bp3-form-group"
                data-id="vaultUrl-0"
              >
                <label
                  class="bp3-label"
                  for="vaultUrl"
                >
                  Vault URL
                   
                  <span
                    class="bp3-text-muted"
                  />
                </label>
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="bp3-input-group"
                  >
                    <input
                      autocomplete="off"
                      class="bp3-input"
                      name="vaultUrl"
                      type="text"
                      value="http://localhost:8200"
                    />
                  </div>
                </div>
              </div>
              <div
                class="bp3-form-group"
                data-id="basePath-1"
              >
                <label
                  class="bp3-label"
                  for="basePath"
                >
                  Base Secret Path (optional)
                   
                  <span
                    class="bp3-text-muted"
                  />
                </label>
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="bp3-input-group"
                  >
                    <input
                      autocomplete="off"
                      class="bp3-input"
                      name="basePath"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
              <div
                class="bp3-form-group"
                data-id="accessType-2"
              >
                <label
                  class="bp3-label"
                  for="accessType"
                >
                  Authentication
                   
                  <span
                    class="bp3-text-muted"
                  />
                </label>
                <div
                  class="bp3-form-content"
                >
                  <div>
                    <label
                      class="bp3-control bp3-radio bp3-inline Radio--radio"
                    >
                      <input
                        checked=""
                        name="accessType"
                        type="radio"
                        value="APP_ROLE"
                      />
                      <span
                        class="bp3-control-indicator"
                      />
                      App Role
                    </label>
                    <label
                      class="bp3-control bp3-radio bp3-inline Radio--radio"
                    >
                      <input
                        name="accessType"
                        type="radio"
                        value="TOKEN"
                      />
                      <span
                        class="bp3-control-indicator"
                      />
                      Token
                    </label>
                  </div>
                </div>
              </div>
              <div
                class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main"
              >
                <div
                  class="bp3-form-group"
                  data-id="appRoleId-3"
                >
                  <label
                    class="bp3-label"
                    for="appRoleId"
                  >
                    App Role ID
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-input-group"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        name="appRoleId"
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                </div>
                <div
                  class="bp3-form-group"
                  data-id="secretId-4"
                >
                  <label
                    class="bp3-label"
                    for="secretId"
                  >
                    Secret ID
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-input-group"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        name="secretId"
                        type="password"
                        value=""
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="bp3-form-group"
                data-id="engineType-5"
              >
                <label
                  class="bp3-label"
                  for="engineType"
                >
                  Secret Engine
                   
                  <span
                    class="bp3-text-muted"
                  />
                </label>
                <div
                  class="bp3-form-content"
                >
                  <div>
                    <label
                      class="bp3-control bp3-radio bp3-inline Radio--radio"
                    >
                      <input
                        checked=""
                        name="engineType"
                        type="radio"
                        value="fetch"
                      />
                      <span
                        class="bp3-control-indicator"
                      />
                      Fetch Engines
                    </label>
                    <label
                      class="bp3-control bp3-radio bp3-inline Radio--radio"
                    >
                      <input
                        name="engineType"
                        type="radio"
                        value="manual"
                      />
                      <span
                        class="bp3-control-indicator"
                      />
                      Manually Configure Engine
                    </label>
                  </div>
                </div>
              </div>
              <div
                class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main"
              >
                <div
                  class="bp3-form-group bp3-disabled"
                  data-id="secretEngine-6"
                >
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-popover-wrapper Select--main bp3-fill"
                    >
                      <div
                        class="bp3-popover-target"
                      >
                        <div
                          class="bp3-input-group bp3-disabled"
                        >
                          <input
                            autocomplete="off"
                            class="bp3-input"
                            disabled=""
                            name="secretEngine"
                            placeholder="Search..."
                            style="padding-right: 0px;"
                            type="text"
                            value=""
                          />
                          <span
                            class="bp3-input-action"
                          >
                            <span
                              class="bp3-icon bp3-icon-caret-down StyledProps--main StyledProps--padding-small"
                              icon="caret-down"
                            >
                              <svg
                                data-icon="caret-down"
                                height="14"
                                viewBox="0 0 16 16"
                                width="14"
                              >
                                <desc>
                                  caret-down
                                </desc>
                                <path
                                  d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                                  fill-rule="evenodd"
                                />
                              </svg>
                            </span>
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <button
                  class="bp3-button bp3-disabled StyledProps--font Button--button StyledProps--main StyledProps--intent-primary StyledProps--margin-top-xsmall"
                  disabled=""
                  tabindex="-1"
                  type="button"
                >
                  <span
                    class="bp3-button-text"
                  >
                    Fetch Engines
                  </span>
                </button>
              </div>
              <div
                class="bp3-form-group"
                data-id="renewIntervalHours-7"
              >
                <label
                  class="bp3-label"
                  for="renewIntervalHours"
                >
                  Renewal Interval (hours)
                   
                  <span
                    class="bp3-text-muted"
                  />
                </label>
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="bp3-input-group"
                  >
                    <input
                      autocomplete="off"
                      class="bp3-input"
                      name="renewIntervalHours"
                      type="text"
                      value="10"
                    />
                  </div>
                </div>
              </div>
              <div
                class="bp3-form-group"
                data-id="readOnly-8"
              >
                <div
                  class="bp3-form-content"
                >
                  <label
                    class="bp3-control bp3-checkbox StyledProps--font Checkbox--checkbox StyledProps--main StyledProps--padding-left-xxlarge StyledProps--inline"
                  >
                    <input
                      name="readOnly"
                      type="checkbox"
                    />
                    <span
                      class="bp3-control-indicator"
                    />
                    Read-only Vault
                  </label>
                </div>
              </div>
              <div
                class="bp3-form-group"
                data-id="default-9"
              >
                <div
                  class="bp3-form-content"
                >
                  <label
                    class="bp3-control bp3-checkbox StyledProps--font Checkbox--checkbox StyledProps--main StyledProps--padding-left-xxlarge StyledProps--inline"
                  >
                    <input
                      name="default"
                      type="checkbox"
                    />
                    <span
                      class="bp3-control-indicator"
                    />
                    Use as Default Secrets Manager
                  </label>
                </div>
              </div>
              <div
                class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main"
              >
                <button
                  class="bp3-button StyledProps--font Button--button StyledProps--main"
                  type="button"
                >
                  <span
                    class="bp3-button-text"
                  >
                    Back
                  </span>
                </button>
                <button
                  class="bp3-button StyledProps--font Button--button StyledProps--main StyledProps--intent-primary"
                  type="submit"
                >
                  <span
                    class="bp3-button-text"
                  >
                    Continue
                  </span>
                </button>
              </div>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Create Secret Manager Wizard should render form in edit 3`] = `
<div>
  <div
    class="StepWizard--main StepWizard--navBar"
  >
    <div
      class="StepWizard--navBarList"
    >
      <span
        class="StepWizard--header"
      >
        <span
          class="bp3-icon StyledProps--main"
        >
          <svg
            fill="none"
            height="37"
            viewBox="0 0 33 33"
            width="37"
          >
            <path
              d="M16.711 16.53a.939.939 0 00.933-.934c0-.489-.4-.933-.933-.933a.939.939 0 00-.933.933c0 .489.4.933.933.933zm-2.8-2.578a.939.939 0 00.933-.934c0-.533-.4-.933-.933-.933a.939.939 0 00-.933.933c0 .534.4.934.933.934zm2.8 0a.939.939 0 00.933-.934c0-.533-.4-.933-.933-.933a.939.939 0 00-.933.933c0 .534.4.934.933.934zm2.8 0a.939.939 0 00.933-.934c0-.533-.4-.933-.933-.933a.939.939 0 00-.933.933c0 .534.444.934.933.934zm-5.6-2.534a.939.939 0 00.933-.933c0-.533-.4-.933-.933-.933a.939.939 0 00-.933.933c0 .533.4.933.933.933zm2.8 0a.939.939 0 00.933-.933c0-.533-.4-.933-.933-.933a.939.939 0 00-.933.933c0 .533.4.933.933.933zm2.8 0a.939.939 0 00.933-.933c0-.533-.4-.933-.933-.933a.939.939 0 00-.933.933c0 .533.444.933.933.933zm-2.8-2.533a.939.939 0 00.933-.933c0-.534-.4-.934-.933-.934a.939.939 0 00-.933.934c0 .488.4.933.933.933zm2.8 0a.939.939 0 00.933-.933c0-.534-.4-.934-.933-.934a.939.939 0 00-.933.934c0 .488.444.933.933.933zm-5.6 0a.939.939 0 00.933-.933c0-.534-.4-.934-.933-.934a.939.939 0 00-.933.934c0 .488.4.933.933.933zm2.445 23.289L0 .174h32.711l-16.355 32z"
              fill="#000"
            />
          </svg>
        </span>
      </span>
      <span
        class="StepWizard--title StepWizard--header"
      >
        HashiCorp Vault
      </span>
      <div
        class="StepWizard--navStep StepWizard--completedStep"
      >
        <span
          class="StepWizard--completedIcon"
        >
          <span
            class="bp3-icon bp3-icon-small-tick StyledProps--main StyledProps--color StyledProps--color-grey200"
            icon="small-tick"
          >
            <svg
              data-icon="small-tick"
              height="20"
              viewBox="0 0 20 20"
              width="20"
            >
              <desc>
                small-tick
              </desc>
              <path
                d="M15 5c-.28 0-.53.11-.71.29L8 11.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42l3 3c.18.18.43.29.71.29s.53-.11.71-.29l7-7A1.003 1.003 0 0015 5z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          Overview
        </p>
      </div>
      <div
        class="StepWizard--navStep StepWizard--completedStep"
      >
        <span
          class="StepWizard--completedIcon"
        >
          <span
            class="bp3-icon bp3-icon-small-tick StyledProps--main StyledProps--color StyledProps--color-grey200"
            icon="small-tick"
          >
            <svg
              data-icon="small-tick"
              height="20"
              viewBox="0 0 20 20"
              width="20"
            >
              <desc>
                small-tick
              </desc>
              <path
                d="M15 5c-.28 0-.53.11-.71.29L8 11.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42l3 3c.18.18.43.29.71.29s.53-.11.71-.29l7-7A1.003 1.003 0 0015 5z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          HashiCorp Vault Details
        </p>
      </div>
      <div
        class="StepWizard--navStep StepWizard--activeStep"
      >
        <span
          class="StepWizard--number"
        >
          3
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          Test Connection
        </p>
      </div>
    </div>
    <div
      class="StepWizard--stepDetails"
    >
       
      <div
        class="Layout--vertical StyledProps--main StyledProps--padding-top-large StyledProps--padding-right-small StyledProps--padding-left-small StyledProps--padding-bottom-large"
        style="height: 100%;"
      >
        <div
          class="Layout--vertical StyledProps--main"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-size-medium StyledProps--font-weight-semi-bold StyledProps--color StyledProps--color-grey800"
          >
            Test Connection
          </p>
          <div
            class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main StyledProps--padding-top-xsmall"
          >
            <p
              class="StyledProps--font StyledProps--main subHeading StyledProps--color StyledProps--color-grey400 StyledProps--font-size-small"
            >
              Vault URL : 
            </p>
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main subHeading StyledProps--color StyledProps--color-grey600 StyledProps--font-size-small"
              style="--text-line-clamp: 1; width: 600px;"
            >
              http://localhost:8200
            </p>
          </div>
          <div
            class="StyledProps--font StyledProps--main content StyledProps--padding-top-xxlarge"
          >
            <div
              class="Layout--vertical Layout--layout-spacing-large StyledProps--main StepsProgress--stepsProgress"
              id="steps-progress"
            >
              <div
                class="StepsProgress--progressBar"
              >
                <div
                  class="bp3-progress-bar bp3-intent-danger bp3-no-stripes StepsProgress--progressHeight"
                >
                  <div
                    class="bp3-progress-meter"
                    style="width: 100%;"
                  />
                </div>
              </div>
              <div
                class="Layout--vertical Layout--layout-spacing-large StyledProps--main"
              >
                <div
                  class="StepsProgress--stepWrap"
                >
                  <span
                    class="bp3-icon bp3-icon-error StyledProps--main StyledProps--color StyledProps--color-red500 StyledProps--margin-right-small"
                    icon="error"
                  >
                    <svg
                      data-icon="error"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <desc>
                        error
                      </desc>
                      <path
                        d="M7.99-.01c-4.42 0-8 3.58-8 8s3.58 8 8 8 8-3.58 8-8-3.58-8-8-8zm1 13h-2v-2h2v2zm0-3h-2v-7h2v7z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                  <div
                    class="StyledProps--font StyledProps--main"
                    style=""
                  >
                    <div
                      class="Layout--vertical StyledProps--main"
                      style="width: 100%;"
                    >
                      <p
                        class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey600"
                      >
                        Validating the HashiCorp Vault authentication and permissions
                      </p>
                      <p
                        class="StyledProps--font StyledProps--main StyledProps--padding-top-small"
                      >
                        Test failed for the connector
                      </p>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="Layout--horizontal Layout--layout-spacing-large StyledProps--main btnWrapper"
        >
          <button
            class="bp3-button bp3-disabled StyledProps--font Button--button StyledProps--main StyledProps--intent-primary"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <span
              class="bp3-button-text"
            >
              Finish
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
